fix searcbox margin issue on small screens

--- a/css/components/_btn-menu.scss
+++ b/css/components/_btn-menu.scss
@@ -1,96 +1,3 @@
-.search {
-  display: none;
-  background-color: rgba(218, 112, 116, 0.09);
-  position: relative;
-  width: 100%;
-
-  input[type="text"] {
-    width: 100%;
-    border: none;
-    padding: 5px 10px;
-    padding-right: 40px;
-    font-size: 1.2rem;
-    background-color: transparent;
-    outline: none;
-    color: map-get($colors, primary);
-
-    &::-webkit-input-placeholder {
-      color: map-get($colors, primary);
-    }
-
-    &:-ms-input-placeholder {
-      color: map-get($colors, primary);
-    }
-  }
-
-  .btn-search {
-    position: absolute;
-    top: 50%;
-    margin-top: -19px;
-    right: 0;
-    z-index: 10;
-
-    &:active {
-      padding-top: 2px;
-    }
-  }
-}
-
-.btn-search {
-  background: transparent;
-  padding: 0;
-
-  &.active {
-    @include transform(scalex(-1));
-  }
-
-  .icon-search {
-    font-size: 1.7rem;
-    color: map-get($colors, primary);
-  }
-}
-
-.btn-show-search {
-  @include transition(transform 0.3s, opacity 0.2s 0.1s);
-}
-
-.show-search {
-
-  .btn-show-search {
-    @include transform(translateX(-200%));
-    opacity: 0;
-  }
-
-  .search {
-    display: block;
-    opacity: 1;
-    right: 0;
-  }
-
-  .drop-down-menu {
-    // float: none;
-  }
-
-  #center-menu {
-    display: none;
-  }
-}
-
-.drop-down-menu {
-  float: right;
-  text-align: right;
-
-  .btn + .btn {
-    margin-left: 38px;
-  }
-}
-
-.btn-no-shadow {
-  &, &.active, &:active {
-    box-shadow: none;
-  }
-}
-
 .btn-menu {
   position: relative;
   background: transparent;
