--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -51,7 +51,7 @@
   }
 
   ul {
-    margin-top: 60px;
+    margin-top: 75px;
     text-align: center;
     padding: 0;
     list-style-type: none;
@@ -112,6 +112,21 @@
         @include transition(opacity 0.5s);
       }
     }
+  }
+}
+
+.drop-down-menu {
+  float: right;
+  text-align: right;
+
+  .btn + .btn {
+    margin-left: 38px;
+  }
+}
+
+.btn-no-shadow {
+  &, &.active, &:active {
+    box-shadow: none;
   }
 }
 
