--- a/css/style.css
+++ b/css/style.css
@@ -3165,7 +3165,7 @@ html {
     color: #fff;
     text-transform: uppercase; }
   .nav-bar ul {
-    margin-top: 60px;
+    margin-top: 75px;
     text-align: center;
     padding: 0;
     list-style-type: none; }
@@ -3220,6 +3220,15 @@ html {
         -o-transition: opacity 0.5s;
         -webkit-transition: opacity 0.5s;
         transition: opacity 0.5s; }
+
+.drop-down-menu {
+  float: right;
+  text-align: right; }
+  .drop-down-menu .btn + .btn {
+    margin-left: 38px; }
+
+.btn-no-shadow, .btn-no-shadow.active, .btn-no-shadow:active {
+  box-shadow: none; }
 
 @media (min-width: 767px) {
   .header {
@@ -3410,6 +3419,8 @@ html {
   -webkit-transform: translateX(-200%);
   transform: translateX(-200%);
   opacity: 0; }
+  .show-search .btn-show-search + .btn {
+    margin-left: 0; }
 
 .show-search .search {
   display: block;
@@ -3418,15 +3429,6 @@ html {
 
 .show-search #center-menu {
   display: none; }
-
-.drop-down-menu {
-  float: right;
-  text-align: right; }
-  .drop-down-menu .btn + .btn {
-    margin-left: 38px; }
-
-.btn-no-shadow, .btn-no-shadow.active, .btn-no-shadow:active {
-  box-shadow: none; }
 
 .btn-menu {
   position: relative;
